fix delete scrollbar in firefox

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -98,6 +98,8 @@ p {
   font-display: swap;
 }
 
+html {overflow: -moz-scrollbars-none;}
+
 body {
   overflow: -moz-scrollbars-none;
 
